--- a/case-study-2.html
+++ b/case-study-2.html
@@ -150,7 +150,12 @@
     font-size: 28px;
     font-weight: bold;
     color: #FF5E5E;
-    margin-bottom: 15px;
+}
+
+#campus-objectives h3 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #006D5D;
 }
     </style>
 </head>
@@ -169,31 +174,99 @@
                 <h3>📅Duration</h3>
                 <p>February, 2024 – May, 2024</p>
             </div>
+            <div class="campus-intro-image">
+                <img src="assets/images/about/campusintro.png" alt="Image Description">
+            </div>
         </div>
     </section>
 </body>
+
 
 <section id="campus-overview" class="lenovo-section">
     <h2>Overview</h2>
     <div class="content-wrapper">
       <div class="left-column">
-        <h3>🌐Site Background</h3>
-        <p>The Storage Central website serves as an educational platform for Lenovo's Infrastructure Solutions Group, aimed at IT Decision Makers and Infrastructure Managers. It provides access to resources such as webinars, security solutions, and storage management tools. However, the site suffers from design inconsistencies and a cluttered user experience, limiting its effectiveness in communicating Lenovo's capabilities and engaging users.</p>
+        <h3>📱Campus Cravings Background</h3>
+        <p>Campus Cravings is a mobile app designed to improve the accessibility and experience of Michigan State University's dining hall services. As part of a class, I identified a key problem: students at MSU were struggling to access convenient and diverse dining options, especially during unforeseen circumstances. This study details my process of using user research, ideation, prototyping, and testing to create a solution aimed at solving these challenges.
+        </p>
 
       </div>
   
       <div class="right-column">
         <h3>⚠️Problem Statement</h3>
-        <p>The Storage Central website suffers from a cluttered layout, inconsistent design, and poor integration with Lenovo.com, resulting in a <strong>fragmented user experience</strong>. Key design elements do not align with Lenovo’s main website, creating a <strong>disjointed experience for users</strong>. A redesign is needed to <strong>improve navigation, visual consistency, and accessibility</strong> while ensuring seamless alignment with Lenovo.com <strong>for a unified user experience</strong>.</p>
-  
-    
+        <p>Dining services are a crucial aspect of student life, but many students face barriers in accessing them. From limited food variety to overcrowded dining halls, students voiced the need for a more convenient and inclusive solution. The challenge was clear: how might we enhance access to dining hall services to better accommodate the diverse needs and preferences of students, ensuring that every student has an equal opportunity to enjoy the dining experience?
+        </p>
       </div>
     </div>
   </section>
 
+  <section id="campus-objectives" class="lenovo-section">
+    <div class="campus-intro-content">
+        <div class="campus-intro-text">
+            <h2>Objectives</h2>
+            <div class="objectives-columns">
+                <div class="left-column">
+                    <h3>🎯Enhance Convenience and Accessibility</h3>
+                    <p>Make dining hall services more convenient and accessible by providing students with easy options to access food, whether through delivery, virtual reality, or other innovative solutions.</p>
+
+                    <h3>🎯Provide Diverse Food Options</h3>
+                    <p>Offer a wide variety of high-quality food options that cater to diverse dietary preferences and ensure availability and freshness throughout the day.</p>
+                </div>
+
+                <div class="right-column">
+                    <h3>🎯Address Unforeseen Circumstances</h3>
+                    <p>Solve issues students face when they miss a meal due to unforeseen circumstances, such as illness, scheduling conflicts, or transportation problems, by offering more flexible dining options.</p>
+
+                    <h3>🎯Create a User-Centered, Inclusive Design</h3>
+                    <p>Design an  app that prioritizes accessibility and inclusion for all students, ensuring a seamless experience in managing dining options, order tracking, and more.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
+<section id="campus-agenda" class="lenovo-section">
+    <h2>Agenda</h2>
+    <div class="content-wrapper">
+        <div class="left-column">
+            <p><strong>🔍User Research </strong></p>
+            <p><strong>💡Ideation</strong></p>
+            <p><strong>📱Wireframes </strong></p>
+        </div>
+        <div class="right-column">
+            <p><strong>👩‍💻Usability Testing</strong></p>
+            <p><strong>📊Key Findings</strong></p>
+            <p><strong>🏁Conclusion</strong></p>
+        </div>
+    </div>
+</section>
 
+<section id="campus-research" class="lenovo-section">
+    <div class="campus-intro-content">
+        <div class="campus-intro-text">
+            <h2>Research Strategy</h2>
+
+                    <p>➮ Conducted across 3 MSU dining halls, a series of 5
+                        interviews were executed with students for the
+                        purpose of delving into their dining habits,
+                        preferences, and challenges.</p>
+
+                    <p>➮ Interviews were conducted with the objective of
+                        uncovering unexpected discoveries that informed
+                        the development of more inclusive solutions.</p>
+
+                        <p>➮ Key Questions Included:</p>
+                        <p class="indent">1) What aspects of the dining hall experience
+                            do you find most enjoyable?</p>
+                        <p class="indent">2) In your opinion, what are some areas
+                            where dining hall services could be improved
+                            to better meet the needs of students?</p>
+                        <p class="indent">3) Can you recall a time when you missed a
+                            meal due to unforeseen circumstances?</p>
+        </div>
+    </div>
+</section>
 
 
 
