dining hall img

--- a/case-study-2.html
+++ b/case-study-2.html
@@ -246,29 +246,68 @@
     <div class="campus-intro-content">
         <div class="campus-intro-text">
             <h2>Research Strategy</h2>
+            <p>➮ Conducted across 3 MSU dining halls, a series of 5
+                interviews were executed with students for the
+                purpose of delving into their dining habits,
+                preferences, and challenges.</p>
 
-                    <p>➮ Conducted across 3 MSU dining halls, a series of 5
-                        interviews were executed with students for the
-                        purpose of delving into their dining habits,
-                        preferences, and challenges.</p>
+            <p>➮ Interviews were conducted with the objective of
+                uncovering unexpected discoveries that informed
+                the development of more inclusive solutions.</p>
 
-                    <p>➮ Interviews were conducted with the objective of
-                        uncovering unexpected discoveries that informed
-                        the development of more inclusive solutions.</p>
-
-                        <p>➮ Key Questions Included:</p>
-                        <p class="indent">1) What aspects of the dining hall experience
-                            do you find most enjoyable?</p>
-                        <p class="indent">2) In your opinion, what are some areas
-                            where dining hall services could be improved
-                            to better meet the needs of students?</p>
-                        <p class="indent">3) Can you recall a time when you missed a
-                            meal due to unforeseen circumstances?</p>
+            <p>➮ Key Questions Included:</p>
+            <p class="indent">1) What aspects of the dining hall experience
+                do you find most enjoyable?</p>
+            <p class="indent">2) What aspects of dining services do you think could be improved to better meet student needs?</p>
+            <p class="indent">3) Can you recall a time when you missed a
+                meal due to unforeseen circumstances?</p>
+        </div>
+        <!-- Image added to the right of the text -->
+        <div class="campus-research-image">
+            <img src="assets/images/about/campusresearch.jpg" alt="Research Image">
         </div>
     </div>
 </section>
 
 
+<section id="campus-researchfindings" class="lenovo-section">
+    <div class="campus-intro-content">
+        <div class="campus-intro-text">
+            <h2>Research Findings</h2>
+            <h3>Convenience and Accessibility</h3>
+            <p>Students prefer dining halls located close to
+                their dorms or classes and expressed frustration when they had to travel long
+                distances or encountered transportation challenges.</p>
+            <h3>Food Variety and Quality</h3>
+            <p>Students favored dining halls that offered diverse
+                menus with high-quality items. Concerns about freshness, portion sizes,
+                and availability of specific ingredients were raised as areas for improvement.</p>
+            <h3>Unforeseen Circumstances</h3>
+            <p>Students shared experiences of encountering
+                unforeseen circumstances that affected their dining hall visits, such as illness,
+                scheduling conflicts, or transportation issues.</p>
+            <h3>Crowd Management/Space</h3>
+            <p>Several students mentioned overcrowding and
+                long lines as challenges in certain dining halls. They prefer dining halls that feel
+                less crowded and more spacious.
+                </p>
+            <h3>Preference for Delivery Services</h3>
+            <p> Students discussed using external delivery
+                services like Uber Eats or expressing the need for more convenient options,
+                particularly when facing transportation challenges or wanting to avoid crowds.</p>
+
+          
+
+
+
+
+        </div>
+        <!-- Image added to the right of the text -->
+        <div class="campus-research-image">
+            <img src="assets/images/about/campusresearch.jpg" alt="Research Image">
+        </div>
+    </div>
+</section>
 
 
 
