--- a/case-study-2.html
+++ b/case-study-2.html
@@ -297,14 +297,10 @@
                 particularly when facing transportation challenges or wanting to avoid crowds.</p>
 
           
-
-
-
-
         </div>
         <!-- Image added to the right of the text -->
-        <div class="campus-research-image">
-            <img src="assets/images/about/campusresearch.jpg" alt="Research Image">
+        <div class="campus-researchfindings-image">
+            <img src="assets/images/about/dininghall.png" alt="Research Image">
         </div>
     </div>
 </section>
