--- a/case-study-2.html
+++ b/case-study-2.html
@@ -274,37 +274,58 @@
     <div class="campus-intro-content">
         <div class="campus-intro-text">
             <h2>Research Findings</h2>
-            <h3>Convenience and Accessibility</h3>
-            <p>Students prefer dining halls located close to
-                their dorms or classes and expressed frustration when they had to travel long
-                distances or encountered transportation challenges.</p>
-            <h3>Food Variety and Quality</h3>
-            <p>Students favored dining halls that offered diverse
-                menus with high-quality items. Concerns about freshness, portion sizes,
-                and availability of specific ingredients were raised as areas for improvement.</p>
-            <h3>Unforeseen Circumstances</h3>
-            <p>Students shared experiences of encountering
-                unforeseen circumstances that affected their dining hall visits, such as illness,
-                scheduling conflicts, or transportation issues.</p>
-            <h3>Crowd Management/Space</h3>
-            <p>Several students mentioned overcrowding and
-                long lines as challenges in certain dining halls. They prefer dining halls that feel
-                less crowded and more spacious.
-                </p>
-            <h3>Preference for Delivery Services</h3>
-            <p> Students discussed using external delivery
-                services like Uber Eats or expressing the need for more convenient options,
-                particularly when facing transportation challenges or wanting to avoid crowds.</p>
-
-          
+            <div class="columns">
+                <div class="column">
+                    <h3>🚶‍♂️Convenience and Accessibility</h3>
+                    <p>Students prefer dining halls located close to
+                        their dorms or classes and expressed frustration when they had to travel long
+                        distances or encountered transportation challenges.</p>
+                    <h3>🍱Food Variety and Quality</h3>
+                    <p>Students favored dining halls that offered diverse
+                        menus with high-quality items. Concerns about freshness, portion sizes,
+                        and availability of specific ingredients were raised as areas for improvement.</p>
+                    <h3>🌧️Unforeseen Circumstances</h3>
+                    <p>Students shared experiences of encountering
+                        unforeseen circumstances that affected their dining hall visits, such as illness,
+                        scheduling conflicts, or transportation issues.</p>
+                </div>
+                <div class="column">
+                    <h3>👥Crowd Management/Space</h3>
+                    <p>Several students mentioned overcrowding and
+                        long lines as challenges in certain dining halls. They prefer dining halls that feel
+                        less crowded and more spacious.</p>
+                    <h3>🛵Preference for Delivery Services</h3>
+                    <p>Students discussed using external delivery
+                        services like Uber Eats or expressing the need for more convenient options,
+                        particularly when facing transportation challenges or wanting to avoid crowds.</p>
+                </div>
+            </div>
         </div>
-        <!-- Image added to the right of the text -->
+
+        <!-- Image moved to the bottom -->
         <div class="campus-researchfindings-image">
-            <img src="assets/images/about/dininghall.png" alt="Research Image">
+            <img src="assets/images/about/dininghall1.png" alt="Research Image">
         </div>
     </div>
 </section>
 
+<section id="campus-ideation" class="lenovo-section">
+    <div class="campus-intro-content">
+        <div class="campus-intro-text">
+            <h2>Ideation</h2>
+            <p>➮  After identifying themes from user research, I began ideating
+                several solutions on paper.</p>
+
+            <p>➮ A few solutions included:</p>
+            <p class="indent"> <strong>1) Dining Delivery App⭐</strong></p>
+            <p class="indent"> <strong>2) Virtual Reality Dining Experience⭐</strong> </p>
+            <p class="indent">3) Mobile Dining Pods</p>
+            <p class="indent">4) Dining Hall Innovation Lab</p>
+            <p class="indent">5) Dine and Dash Bike Stations</p>
+
+        </div>
+    </div>
+</section>
 
 
 
