--- a/case-study-2.html
+++ b/case-study-2.html
@@ -313,8 +313,7 @@
     <div class="campus-intro-content">
         <div class="campus-intro-text">
             <h2>Ideation</h2>
-            <p>➮  After identifying themes from user research, I began ideating
-                several solutions on paper.</p>
+            <p>➮  After identifying themes from user research, I began the ideation process, where I brainstormed and sketched out several potential solutions to address the identified pain points and enhance the overall user experience. This phase involved exploring a variety of ideas on paper, considering different technological approaches and creative concepts to best meet the needs of the users.</p>
 
             <p>➮ A few solutions included:</p>
             <p class="indent"> <strong>1) Dining Delivery App⭐</strong></p>
@@ -322,8 +321,34 @@
             <p class="indent">3) Mobile Dining Pods</p>
             <p class="indent">4) Dining Hall Innovation Lab</p>
             <p class="indent">5) Dine and Dash Bike Stations</p>
-
         </div>
+    </div>
+
+    <!-- Image added below the text and centered -->
+    <div class="campus-ideation-image">
+        <img src="assets/images/about/ideation.png" alt="Ideation Image">
+    </div>
+</section>
+
+<section id="campus-ideation" class="lenovo-section">
+    <div class="campus-intro-content">
+        <div class="campus-intro-text">
+            <h2>Wireframes</h2>
+            <h3>Low-Fidelity</h3>
+            <p>➮ Narrowing down my sketches from the ideation phase, I pursued 2 for wireframes:</p>
+            <p class="indent"> <strong>1) Dining Delivery App</strong></p>
+            <p class="indent"> <strong>2) Virtual Reality Dining Experience</strong> </p>
+
+            <p>➮ I chose these two ideas to pursue for wireframes because they address my initial design problem of
+                making the dining hall more accessible for students. I also was excited to bring the concept of a virtual reality dining experience to life through paper!</p>
+
+          
+        </div>
+    </div>
+
+    <!-- Image added below the text and centered -->
+    <div class="campus-ideation-image">
+        <img src="assets/images/about/ideation.png" alt="Ideation Image">
     </div>
 </section>
 
