--- a/case-study-2.html
+++ b/case-study-2.html
@@ -348,11 +348,30 @@
 
     <!-- Image added below the text and centered -->
     <div class="campus-ideation-image">
-        <img src="assets/images/about/ideation.png" alt="Ideation Image">
+        <img src="assets/images/about/campuslowfi.png" alt="Ideation Image">
     </div>
 </section>
 
+<section id="campus-ideation" class="lenovo-section">
+    <div class="campus-intro-content">
+        <div class="campus-intro-text">
+            <h2>Wireframes</h2>
+            <h3>High-Fidelity</h3>
+            <p>➮ After presenting my low-fidelity wireframes in class, I decided to incorporate augmented reality into the app, allowing students to visualize the dining hall layout, menu items, and real-time wait times for enhanced convenience.</p>
+            <p>➮ The AR feature was designed to offer a more immersive & engaging experience, helping students navigate dining options easily and make better decisions based on real-time information.</p>
+            <p>➮ I then moved on to design the high-fidelity wireframes, focusing on key visual design elements and realistic UI components to represent the final look of the app.</p>
+            <p>➮ I chose a bright, vibrant color palette to engage students and evoke a sense of energy and excitement, making the app more visually appealing.</p>
+            <p>➮ I created the logo on a whim in Adobe Illustrator, experimenting with various design concepts, and ended up liking the result.</p>
+            
+           
+        </div>
+    </div>
 
+    <!-- Image added below the text and centered -->
+    <div class="campus-ideation-image">
+        <img src="assets/images/about/campuslowfi.png" alt="Ideation Image">
+    </div>
+</section>
 
 
 
