--- a/case-study-2.html
+++ b/case-study-2.html
@@ -225,7 +225,6 @@
     </div>
 </section>
 
-
 <section id="campus-agenda" class="lenovo-section">
     <h2>Agenda</h2>
     <div class="content-wrapper">
@@ -440,14 +439,25 @@
           
         </div>
     </div>
-
     <!-- Image added below the text -->
     <div class="campus-hifiwireframes-image">
-        <img src="assets/images/about/campushifi.png" alt="Ideation Image">
+        <img src="assets/images/about/future.png" alt="Ideation Image">
     </div>
 </section>
 
 
+<section id="campus-objectives" class="lenovo-section">
+    <div class="campus-intro-content">
+        <div class="campus-intro-text">
+            <h2>Conclusion</h2>
+            <p>➮ Over the past several months, I’ve reflected on the Campus Cravings app and the journey it took me on. While I haven’t been able to continue actively working on the app, the user feedback and insights gained from MI450 have shaped my design approach.</p>
+            <p>➮ The experience highlighted the importance of usability testing and understanding user interaction. Challenges, such as menu selection and order tracking, reinforced the need for clarity and simplicity in UX design.</p>
+            <p>➮ Although development on the app has stalled, I plan to revisit it in the future, applying the lessons learned to refine the app and take it further.</p>
+            <p>➮ Moving forward, I aim to continue exploring Campus Cravings with a focus on user-centered design, confident that the insights gained will guide my future projects.</p>
+
+        </div>
+    </div>
+</section>
 
 
 
