--- a/case-study-2.html
+++ b/case-study-2.html
@@ -446,7 +446,7 @@
 </section>
 
 
-<section id="campus-objectives" class="lenovo-section">
+<section id="campus-conclusion" class="lenovo-section">
     <div class="campus-intro-content">
         <div class="campus-intro-text">
             <h2>Conclusion</h2>
@@ -454,10 +454,13 @@
             <p>➮ The experience highlighted the importance of usability testing and understanding user interaction. Challenges, such as menu selection and order tracking, reinforced the need for clarity and simplicity in UX design.</p>
             <p>➮ Although development on the app has stalled, I plan to revisit it in the future, applying the lessons learned to refine the app and take it further.</p>
             <p>➮ Moving forward, I aim to continue exploring Campus Cravings with a focus on user-centered design, confident that the insights gained will guide my future projects.</p>
-
+        </div>
+        <div class="campus-conclusion-image">
+            <img src="assets/images/about/inconclusion.png" alt="Conclusion Image">
         </div>
     </div>
 </section>
+
 
 
 
