actually done this time*

--- a/case-study-2.html
+++ b/case-study-2.html
@@ -114,13 +114,31 @@
 							typewriter
 								.typeString('UX Design')
 								.pauseFor(20)
-								.deleteChars(6)
-								.typeString('Research')
+								.deleteChars(9)
+								.typeString('UX Research')
 								.pauseFor(20)
-								.deleteAll()
-								.pauseFor(20)
-								.deleteChars(8)
-								.typeString('Web Design')
+								.deleteChars(11)
+								.typeString('UI Design')
+                                .pauseFor(20)
+								.deleteChars(9)
+								.typeString('Wireframing')
+                                .pauseFor(20)
+								.deleteChars(11)
+								.typeString('Prototyping')
+                                .pauseFor(20)
+								.deleteChars(11)
+								.typeString('Usability Testing')
+                                .pauseFor(20)
+								.deleteChars(17)
+								.typeString('AR Integration')
+                                .pauseFor(20)
+								.deleteChars(15)
+								.typeString('Brand Design')
+                                .pauseFor(20)
+								.deleteChars(12)
+								.typeString('Interaction Design')
+                                .pauseFor(20)
+								.deleteChars(18)
 								.start();
 						</script>
 						<br>
