--- a/case-study-1.html
+++ b/case-study-1.html
@@ -226,10 +226,9 @@
             <div class="content-wrapper">
                 <div class="text-content">
                     <p>➮ Kicked off the project by contacting The Creation Agency, the original designer of the Storage Central website</p>
-                    <p>➮ Met with the Client Delivery Director, Natalia Herrero, to gain insights into the original website design and user needs</p>
+                    <p>➮ Met with the Client Delivery Director to gain insights into the original website design and user needs</p>
                     <p>➮ Goal of the meeting was to gain a deeper understanding of the users, purpose of the site, and relevant data</p>
-                    <p>➮ Asked Natalia a series of questions to guide and inform the redesign process</p>
-                    <p>➮ Asked Natalia a series of questions to guide and inform the redesign process</p>
+                    <p>➮ Asked the Client Delivery Directo a series of questions to guide and inform the redesign process</p>
                 </div>
                 <div class="research-image">
                     <img src="assets/images/about/Lenovoresearch.png" alt="Research Image" />
