--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 													June - August 2024
 												</h2>
-												<h3>test</h3>
+												<h3>Web & Solutions Marketing Design Intern</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-5">
