--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
 					<div class="col-sm-6">
 						<div class="single-about-txt">
 							<h3>
-								Welcome to my digital sandbox!⛱️ I'm a UX designer & researcher passionate about enhancing the human experience through thoughtful designs. Right now, I'm diving into user research at Lenovo, crafting solutions at the MSU Burgess Institute, and uncovering insights at Spartie VR Lab.
+								Welcome to my digital sandbox!⛱️ I'm a UX designer and researcher passionate about creating designs that enhance the way people interact with technology. Right now, I'm diving into user research at Lenovo, crafting solutions at the MSU Burgess Institute, and uncovering insights at Spartie VR Lab.
 
 
 							</h3>
 							<p>
-								Currently pursuing my Master's in Human Computer Interaction at Michigan State University, I'm deepening my expertise in user research and design. With a graduation date set for May 2025, I bring a diverse background in UX design & research, marketing design, graphic design, and game design to the table. I’m excited to collaborate with teams that are shaping the future of technology and creating experiences that make a positive impact. I’m always excited to connect with others who share a passion for design. If you're looking to collaborate, exchange ideas, or connect, <a href="#contact" style="color:#8E3965; text-decoration: underline;">feel free to reach out</a> – I’d love to hear from you!
+								Currently pursuing my Master's in Human Computer Interaction at Michigan State University, I'm deepening my knowledge in user research and design. With a graduation date of May 2025, I bring a diverse background in UX design & research, marketing design, graphic design, and game design to the table. I’m excited to collaborate with teams that are shaping the future of technology and creating experiences that make a positive impact. I’m always excited to connect with others who share a passion for design. If you're looking to collaborate, exchange ideas, or connect, <a href="#contact" style="color:#8E3965; text-decoration: underline;">feel free to reach out</a> – I’d love to hear from you!
 							</p>
 
 						</div>
@@ -427,7 +427,7 @@
 													<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 													June - August 2024
 												</h2>
-												<h3>Web & Solutions Marketing Design Intern</h3>
+												<h3>Web & Solutions Marketing Design</h3>
 											</div><!--/.experience-time-->
 										</div><!--/.col-->
 										<div class="col-md-5">
