--- a/case-study-1.html
+++ b/case-study-1.html
@@ -557,13 +557,13 @@
         <section id="lenovo-conclusion" class="lenovo-section">
             <h2>Conclusion</h2>
             <h3>Key Achievements</h3>
-            <p>🏆The redesign improved the overall user experience and addressed accessibility issues presented in original design</p>
-            <p>🏆Alignment with Lenovo.com ensures a smooth integration</p>
+            <p>🏆The redesign improved the overall user experience and addressed accessibility issues presented in original design.</p>
+            <p>🏆The alignment with Lenovo.com ensures a smooth integration. </p>
 
             <h3>Future Recommendations</h3>
-            <p>📌Conduct user testing! This will help validate design decisions,identify usability issues, and gather feedback for continuous improvement</p>
-            <p>📌Replace outdated imagery to better align with the site’s purpose and update copy for a more coherent experience</p>
-            <p>📌Explore different types of in-page navigation that could benefit not only Storage Central, but all of Lenovo.com (sidebar nav, accordion menus, etc)</p>
+            <p>📌Conduct user testing! This will help validate design decisions, identify usability issues, and gather feedback for continuous improvement. </p>
+            <p>📌Replace outdated imagery to better align with the site’s purpose and update copy for a more coherent experience.</p>
+            <p>📌Explore different types of in-page navigation that could benefit not only Storage Central, but all of Lenovo.com (sidebar nav, accordion menus, etc).</p>
         </section>
     </body>
 
