--- a/index.html
+++ b/index.html
@@ -1,100 +1,59 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
 
 <head>
-	<!-- meta data -->
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <!-- Meta Data -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<!--font-family-->
-	<link
-		href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext"
-		rel="stylesheet">
+  <!-- Title -->
+  <title>Mikayla's Portfolio</title>
 
-	<!-- title of site -->
-	<title>Mikayla's Portfolio</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet" />
 
-	<!-- For favicon png -->
-	<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
 
-	<!--font-awesome.min.css-->
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-
-	<!--flat icon css-->
-	<link rel="stylesheet" href="assets/css/flaticon.css">
-
-	<!--animate.css-->
-	<link rel="stylesheet" href="assets/css/animate.css">
-
-	<!--owl.carousel.css-->
-	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-
-	<!--bootstrap.min.css-->
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-
-	<!-- bootsnav -->
-	<link rel="stylesheet" href="assets/css/bootsnav.css">
-
-	<!--style.css-->
-	<link rel="stylesheet" href="assets/css/style.css">
-
-	<!--responsi ve.css-->
-	<link rel="stylesheet" href="assets/css/responsive.css">
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-
-	<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+  <!-- CSS Stylesheets -->
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="assets/css/flaticon.css" />
+  <link rel="stylesheet" href="assets/css/animate.css" />
+  <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
+  <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" />
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/bootsnav.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/responsive.css" />
 </head>
 
 <body>
-	<!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
-
-	<!-- top-area Start -->
-	<header class="top-area">
-		<div class="header-area">
-			<!-- Start Navigation -->
-			<nav class="navbar navbar-default bootsnav navbar-fixed dark no-background">
-
-				<div class="container">
-
-					<!-- Start Header Navigation -->
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-							<i class="fa fa-bars"></i>
-						</button>
-						<a class="navbar-brand" href="index.html">Mikayla Slavin</a>
-					</div><!--/.navbar-header-->
-					<!-- End Header Navigation -->
-
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
-						<ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-							<li class=" smooth-menu active"></li>
-							<li class="smooth-menu"><a href="#about">about</a></li>
-							<li class="smooth-menu"><a href="#work">work</a></li>
-							<li class="smooth-menu"><a href="#experience">experience</a></li>
-							<li class=" smooth-menu"><a href="#education">education</a></li>
-							<li class="smooth-menu"><a href="#contact">contact</a></li>
-						</ul><!--/.nav -->
-					</div><!-- /.navbar-collapse -->
-				</div><!--/.container-->
-			</nav><!--/nav-->
-			<!-- End Navigation -->
-		</div><!--/.header-area-->
-
-		<div class="clearfix"></div>
-
-	</header><!-- /.top-area-->
-	<!-- top-area End -->
+  <!-- Header Navigation -->
+  <header class="top-area">
+    <div class="header-area">
+      <nav class="navbar navbar-default bootsnav navbar-fixed dark no-background">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+              <i class="fa fa-bars"></i>
+            </button>
+            <a class="navbar-brand" href="index.html">Mikayla Slavin</a>
+          </div>
+          <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
+            <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
+              <li class="smooth-menu"><a href="#about">about</a></li>
+              <li class="smooth-menu"><a href="#work">work</a></li>
+              <li class="smooth-menu"><a href="#experience">experience</a></li>
+              <li class="smooth-menu"><a href="#education">education</a></li>
+              <li class="smooth-menu"><a href="#contact">contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div class="clearfix"></div>
+  </header>
 
 	<!--welcome-hero start -->
 	<section id="welcome-hero" class="welcome-hero">
@@ -159,13 +118,10 @@
 						<div class="single-about-txt">
 							<h3>
 								Welcome to my digital sandbox!⛱️ I'm a UX designer and researcher passionate about creating designs that enhance the way people interact with technology. Right now, I'm diving into user research at Lenovo, crafting solutions at the MSU Burgess Institute, and uncovering insights at Spartie VR Lab.
-
-
 							</h3>
 							<p>
 								Currently pursuing my Master's in Human Computer Interaction at Michigan State University, I'm deepening my knowledge in user research and design. With a graduation date of May 2025, I bring a diverse background in UX design & research, marketing design, graphic design, and game design to the table. I’m excited to collaborate with teams that are shaping the future of technology and creating experiences that make a positive impact. I’m always excited to connect with others who share a passion for design. If you're looking to collaborate, exchange ideas, or connect, <a href="#contact" style="color:#8E3965; text-decoration: underline;">feel free to reach out</a> – I’d love to hear from you!
 							</p>
-
 						</div>
 					</div>
 					<div class="col-sm-offset-1 col-sm-5">
@@ -183,7 +139,6 @@
 										<a href="tel:+19062046226">
 											<i class="fa fa-phone" aria-hidden="true"></i>
 										</a>
-
 									</li><!-- / li -->
 									<li>
 										<a href="https://www.linkedin.com/in/mikaylaslavin/">
@@ -195,13 +150,9 @@
 											<i class="fa fa-github" aria-hidden="true"></i>
 										</a>
 									</li><!-- / li -->
-
-
 								</ul><!-- / ul -->
 							</div><!-- /.about-list-icon -->
-
 						</div>
-
 					</div>
 				</div>
 			</div>
@@ -627,14 +578,6 @@
 												Submit
 											</button>
 										</div>
-										<!-- <div class="col-sm-12">
-												<div class="single-contact-btn contact-btn">
-													<a href="#" class="contact-btn" role="button">
-														Submit
-														<button type="submit">Submit</button>
-													</a> -->
-										<!-- </div>/.single-single-contact-btn -->
-										<!-- </div>/.col -->
 									</div>
 								</form><!--/form-->
 							</div><!--/.contact-form-->
@@ -686,56 +629,26 @@
 			<div class="hm-footer-copyright text-center">
 				<p>
 					&copy; copyright Mikayla Slavin. <a href="https://www.themesine.com/"></a>
-				</p><!--/p-->
-			</div><!--/.text-center-->
-		</div><!--/.container-->
+				</p>
+			</div>
+		</div>
 
 		<div id="scroll-Top">
 			<div class="return-to-top">
 				<i class="fa fa-angle-up " id="scroll-top"></i>
 			</div>
-
-		</div><!--/.scroll-Top-->
-
-	</footer><!--/.footer-copyright-->
+		</div>
+	</footer>
 	<!--footer-copyright end-->
 
-	<!-- Include all js compiled plugins (below), or include individual files as needed -->
-
 	<script src="assets/js/jquery.js"></script>
-
-	<!--modernizr.min.js-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-
-	<!--bootstrap.min.js-->
 	<script src="assets/js/bootstrap.min.js"></script>
-
-	<!-- bootsnav js -->
 	<script src="assets/js/bootsnav.js"></script>
-
-	<!-- jquery.sticky.js -->
 	<script src="assets/js/jquery.sticky.js"></script>
-
-	<!-- for progress bar start-->
-
-	<!-- progressbar js -->
 	<script src="assets/js/progressbar.js"></script>
-
-	<!-- appear js -->
 	<script src="assets/js/jquery.appear.js"></script>
-
-	<!-- for progress bar end -->
-
-	<!--owl.carousel.js-->
 	<script src="assets/js/owl.carousel.min.js"></script>
-
-
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-
-
-	<!--Custom JS-->
 	<script src="assets/js/custom.js"></script>
-
-</body>
-
-</html>
+  </body>
+  </html>
