--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 					<div class="col-sm-6">
 						<div class="single-about-txt">
 							<h3>
-								Welcome to my digital sandbox!⛱️ I'm a UX designer and researcher passionate about creating designs that enhance the way people interact with technology. Right now, I'm diving into user research at Lenovo, crafting solutions at the MSU Burgess Institute, and uncovering insights at Spartie VR Lab.
+								Welcome to my digital sandbox! I'm a UX designer & researcher passionate about creating thoughtful, impactful experiences through design.
 							</h3>
 							<p>
-								Currently pursuing my Master's in Human Computer Interaction at Michigan State University, I'm deepening my knowledge in user research and design. With a graduation date of May 2025, I bring a diverse background in UX design & research, marketing design, graphic design, and game design to the table. I’m excited to collaborate with teams that are shaping the future of technology and creating experiences that make a positive impact. I’m always excited to connect with others who share a passion for design. If you're looking to collaborate, exchange ideas, or connect, <a href="#contact" style="color:#8E3965; text-decoration: underline;">feel free to reach out</a> – I’d love to hear from you!
+								I recently earned my Master’s in Human Computer Interaction from Michigan State University and now spend my days designing at Kzoom, a full-service digital marketing agency based in Kalamazoo, MI. My background blends UX research and design with marketing, graphic design, and even a bit of game design—giving me a well-rounded, creative approach to problem-solving. I'm especially drawn to projects that spark positive change and make technology more accessible and enjoyable for everyone. If you're looking to collaborate, exchange ideas, or connect, <a href="#contact" style="color:#8E3965; text-decoration: underline;">feel free to reach out</a> – I’d love to hear from you!
 							</p>
 						</div>
 					</div>
@@ -587,7 +587,7 @@
 						<div class="single-contact-box">
 							<div class="contact-adress">
 								<div class="contact-add-head">
-									<h3>Mikayla Slavin🍓</h3>
+									<h3>Mikayla Slavin</h3>
 									<p>UX Designer & Researcher</p>
 								</div>
 								<div class="contact-add-info">
